# gingersnap

./: .gitmodules  CMakeLists.txt  Makefile  README.md  autodebug_emu.py  make.py
data/corpus/target6/: input1  input2
data/corpus/test_corpus/: truths.txt
data/crashes/: segfault-read-2021-10-30-23:42:41:678359232.crash
data/targets/src/: target-mips.c  target.c  target2.c  target3.c  target4.c  target5.c  target6.c  target_syslog.c
notes/: target6-fuzzing.md
src/corpus/: corpus.c  corpus.h  coverage.c  coverage.h
src/debug_cli/: debug_cli.c  debug_cli.h
src/elf_loader/: elf_loader.c  elf_loader.h  program_header.c  program_header.h
src/emu/: emu_generic.c  emu_generic.h  emu_riscv.c  emu_riscv.h  emu_stats.c  emu_stats.h  emu_x86_64.c  emu_x86_64.h  risc_v_emu.c  risc_v_emu.h  riscv_emu.c  riscv_emu.h  syscall.c  syscall.h  syscall_riscv.c  syscall_riscv.h
src/emu/mips64msb/: mips64msb.c  mips64msb.h
src/emu/riscv/: riscv.c  riscv.h  syscall_riscv.c  syscall_riscv.h
src/emu_debug/: emu_debug.c  emu_debug.h
src/fuzzer/: fuzzer.c  fuzzer.h
src/main/: config.c  config.h  main.c  sig_handler.c  sig_handler.h
src/mmu/: adr_map.c  adr_map.h  mmu.c  mmu.h
src/shared/: binary_integers.c  binary_integers.h  cli.c  cli.h  elf_loader.c  elf_loader.h  endianess_converter.c  endianess_converter.h  heap_str.c  heap_str.h  hstring.c  logger.c  logger.h  print_utils.c  print_utils.h  token_str.c  token_str.h  vector.c  vector.h
src/snap/: snapshot_engine.c  snapshot_engine.h
src/tests/: emu_tests.c
src/utils/: cli.c  cli.h  dir.c  dir.h  endianess.c  endianess.h  endianess_converter.c  endianess_converter.h  hash.h  hstring.c  hstring.h  logger.h  print_utils.c  print_utils.h  vector.c  vector.h
tests/: emu_tests.c
